Tweak gap to prevent power wrapping

--- a/src/css-modules/_player-info.less
+++ b/src/css-modules/_player-info.less
@@ -3,7 +3,7 @@
 #player-info {
   display: grid;
   grid-template: 'in-game-time power' / min-content 1fr;
-  gap: 10px 60px;
+  gap: 10px 40px;
 
   @media (max-width: @l-screens) {
     gap: 10px;
